# idealist

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: CLAUDE_NOTES.md  PULL_REQUEST_TEMPLATE.md  WORKFLOWS_ANALYSIS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
docs/: configuration.md  installation.md  testing_roadmap.md  troubleshooting.md
examples/: advanced_features.py  logging_example.py  quick_start.py
idealist/: __init__.py
idealist/core/: __init__.py  base.py  device.py  diagnostics.py  persistence.py  prior_distributions.py
idealist/data/: __init__.py  loaders.py
idealist/models/: __init__.py  ideal_point.py
idealist/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_basic_estimation.py  test_covariates.py  test_device.py  test_edge_cases.py  test_flexible_priors.py  test_inference_response_combinations.py  test_integration.py  test_mcmc_diagnostics.py  test_multidimensional.py  test_optimizers.py  test_persistence.py  test_prediction.py  test_priors.py  test_response_types.py  test_temporal.py  test_validation.py  test_vi_guides.py
