[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idealist"
version = "0.1.0"
description = "Ideal point estimation using JAX and NumPyro"
readme = "README.md"
authors = [
    {name = "Michal Ovadek", email = "michal.ovadek@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["ideal points", "irt", "bayesian", "jax", "numpyro", "latent variable", "scaling"]
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpyro>=0.13.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.290",
    "mypy>=1.0.0",
]
# Documentation dependencies
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
# GPU support (CUDA 12.x) - note: conflicts with cpu-only jax
# Users should install this in a fresh environment
cuda12 = [
    "jax[cuda12]>=0.4.0",
]
# GPU support (CUDA 11.x) - note: conflicts with cpu-only jax
# Users should install this in a fresh environment
cuda11 = [
    "jax[cuda11]>=0.4.0",
]
# Complete installation with all extras
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.290",
    "mypy>=1.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/michalovadek/idealist"
Documentation = "https://github.com/michalovadek/idealist#readme"
Repository = "https://github.com/michalovadek/idealist"
Issues = "https://github.com/michalovadek/idealist/issues"

[tool.setuptools]
packages = ["idealist", "idealist.core", "idealist.models", "idealist.data", "idealist.utils"]

[tool.setuptools.package-data]
idealist = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=idealist",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
